##-*- Mode: Change-Log; coding: utf-8; -*-
##
## Change log for perl distribution DiaColloDB

v0.10.006 Mon, 11 Jul 2016 11:03:01 +0200 moocow
	* better version dependency for v5.10.0

v0.10.005 Thu, 07 Jul 2016 14:40:04 +0200 moocow
	* replaced DDC::XS query-parsing and -manipulation with DDC::Any from DDC::Concordance >= v0.25
	  - obviates troublesome Alien::DDC::Concordance dependency
	  - still only expected to run correctly on *NIX systems due to runtime calls to sort etc.
	* commented out DiaColloDB::create() debugging code from v0.10.004_01

v0.10.004_01 Tue, 05 Jul 2016 09:27:52 +0200 moocow
	* debugging release for un-reproducible 'undefined value' errors on Birmingham data

v0.10.004 Tue, 28 Jun 2016 09:30:42 +0100 moocow
	* updated -nofilters option to dcdb-create.perl (alias -use-all-the-data, a la Mark Lauersdorf)
	* added DDCTabs 'foreign' option (-dO=foreign=1)
	* added (p|w|l)(good|bad)file options to DiaColloDB::create (stoplist files)

v0.10.003 Tue, 21 Jun 2016 15:37:23 +0200 moocow
	* added -subclient-option to dcdb-query.perl (common options for list:// sub-clients)
	* fixed stringification bug for ddc-diff queries introduced in v0.09.002
	  'Can't use string ("l") as a HASH ref while "strict refs" in use at DiaColloDB/Relation.pm line 281.'

v0.10.002 Mon, 13 Jun 2016 15:51:42 +0200 moocow
	* native query syntax fix: identify CQOr queries and throw an error

v0.10.001 Thu, 12 May 2016 16:57:56 +0200 moocow
	* added -log-level option to dcdb-info.perl
	* removed dates from generic term-tuple vocabulary ("x-tuples" -> "t-tuples"), a la tdf relation
	* changed db structure for more efficient 2-pass Cofreqs queries (f2 bug-fix)
	  - Cofreqs now 3-level (id1 -> (date -> (id2->f)))
	  - Unigrams now 2-level (id1 -> (date -> f))
	  - Relation::subprofile1() and subprofile2() calling conventions changed
	  - changed temporary file format for "tokens.dat" used by DiaColloDB::create(): added dates
	* changed export text file formats