@@ -2,6 +2,9 @@
 ##
 ## Change log for perl distribution DiaColloDB
 
+PENDING
+	* removed "hard" pdl dependencies, moved to 'recommends'
+
 v0.10.006 Mon, 11 Jul 2016 11:03:01 +0200 moocow
 	* better version dependency for v5.10.0
 
